[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Autoloads/PauseMenuTemporary/SettingsMenu.gd" type="Script" id=1]

[node name="SettingsMenu" type="Panel"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -77.0
margin_right = 300.0
margin_bottom = 77.0
rect_min_size = Vector2( 600, 0 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 14.0
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 600.0
margin_bottom = 28.0

[node name="Resolution" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 600.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="VBoxContainer/Resolution"]
margin_top = 3.0
margin_right = 294.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "resolution"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Resolution"]
margin_left = 306.0
margin_right = 600.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "920 x 540"
items = [ "920 x 540", null, false, 0, null, "1280 x 720", null, false, 1, null, "1920 x 1080", null, false, 2, null ]
selected = 0

[node name="Fullscreen" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 600.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="VBoxContainer/Fullscreen"]
margin_top = 5.0
margin_right = 294.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "fullscreen"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Fullscreen"]
margin_left = 306.0
margin_right = 600.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "On"

[node name="MouseSensitivity" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 600.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="VBoxContainer/MouseSensitivity"]
margin_top = 5.0
margin_right = 522.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Mouse Sensitivity"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/MouseSensitivity"]
margin_left = 526.0
margin_right = 600.0
margin_bottom = 24.0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="ControllerSensitivity" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 600.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="VBoxContainer/ControllerSensitivity"]
margin_top = 5.0
margin_right = 522.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Controller Sensitivity"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/ControllerSensitivity"]
margin_left = 526.0
margin_right = 600.0
margin_bottom = 24.0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="Back" type="Button" parent="VBoxContainer"]
margin_left = 279.0
margin_top = 170.0
margin_right = 321.0
margin_bottom = 190.0
size_flags_horizontal = 6
text = "Back"

[connection signal="item_selected" from="VBoxContainer/Resolution/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="VBoxContainer/Fullscreen/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="value_changed" from="VBoxContainer/MouseSensitivity/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
